# unimodality-pipeline

./: .gitignore  README.md  env.yml  pyproject.toml
notebooks/: generate_plots.ipynb  prepare_replogle_data.ipynb
resources/bmdb_database/: PhDB.txt  TxDB.txt
scripts/: experiments.sh  run_clip.sh  run_clip_disabled_ph_encoder.sh  run_clip_disabled_tx_encoder.sh  run_clip_frozen_ph_encoder.sh  run_clip_frozen_tx_encoder.sh  run_exp.sh  run_inference.sh  run_training.sh  run_training_array.sh  run_training_array_ph_disabled.sh  run_training_array_shake.sh  submit_array.sh
src/: multimodal_dataset.py
src/models/: base_double_head_model.py  double_mlp_encoders.py
src/modules/: clip_module.py  dino_module.py  simclr_module.py
src/runners/: run_clip.py  run_dino.py
src/tools/: cloom_utils.py  constants.py  losses.py  training_utils.py
unimodality_pipeline/: __init__.py
unimodality_pipeline/datasets/: __init__.py  basic_dataset.py  basic_dataset_module.py
unimodality_pipeline/eval/: bmdb_eval.py  evaluate.py  knn.py  post_process.py
unimodality_pipeline/models/: __init__.py  mlp.py
unimodality_pipeline/modules/: clip_module.py
unimodality_pipeline/setups/: __init__.py  c2kd_module.py  cka_clip_module.py  clip_module.py  clipped_dino_module.py  dcca_module.py  kd_module.py  ph_supervised_module.py  shake_module.py  sigclip_module.py  ssl_c2kd_module.py  vicreg_module.py
unimodality_pipeline/tests/: __init__.py  run_clip.py  run_inference.py
unimodality_pipeline/tools/: __init__.py  clip_losses.py  constants.py  dcc_loss.py  ot_loss.py  sigclip_loss.py  vicreg_loss.py
