[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "unimodality_pipeline"
description = "Implementation of the unimodality pipeline."
dynamic = ["version"]
authors = [{ name = "Yassir El Mesbahi", email = "yassir@valencelabs.com" }]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

keywords = ["transcriptomics", "phenomics", "dataloaders", "pytorch"]
dependencies = [
    "h5py",
    "pandas",
    "numpy",
    "torch",
    "torchmetrics",
    "pytorch_lightning",
    "tqdm",
]

[project.urls]
"Source Code" = "https://github.com/valence-labs/unimodality_pipeline"
"Bug Tracker" = "https://github.com/valence-labs/unimodality_pipeline/issues"
"Documentation" = "https://github.com/valence-labs/unimodality_pipeline"


[project.scripts]
model_training = "unimodality_pipeline.tests.run_clip:main"
embeddings_extraction = "unimodality_pipeline.tests.run_inference:main"

[tool.setuptools]
include-package-data = true
zip-safe = false
license-files = ["LICENSE"]

[tool.setuptools_scm]
fallback_version = "dev"


[tool.setuptools.packages.find]
where = ["."]
include = ["unimodality_pipeline", "unimodality_pipeline.*"]
exclude = []
namespaces = true

[tool.black]
line-length = 100
target-version = ['py311', 'py312']
include = '\.pyi?$'

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--verbose --color yes"
testpaths = ["tests"]

[tool.ruff.pycodestyle]
max-doc-length = 150

[tool.ruff]
line-length = 120
# Enable Pyflakes `E` and `F` codes by default.
select = [
    "E",
    "W", # see: https://pypi.org/project/pycodestyle
    "F", # see: https://pypi.org/project/pyflakes
]
extend-select = [
    "C4",  # see: https://pypi.org/project/flake8-comprehensions
    "SIM", # see: https://pypi.org/project/flake8-simplify
    "RET", # see: https://pypi.org/project/flake8-return
    "PT",  # see: https://pypi.org/project/flake8-pytest-style
]
ignore = [
    "E731", # Do not assign a lambda expression, use a def
    "S108",
    "F401",
    "S105",
    "E501",
    "E722",
]
# Exclude a variety of commonly ignored directories.
exclude = [".git", "scripts", "notebooks"]
ignore-init-module-imports = true
